# Eraser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
SocketServer/: README_QT.md
SocketServer/Dashboard/: Dashboard.pro  DashboardWindow.cpp  DashboardWindow.h  DashboardWindow.ui  ServerCoreConnector.cpp  ServerCoreConnector.h  main.cpp
SocketServer/ServerCore/: ClientToServerBridge.cpp  ClientToServerBridge.h  DashboardToServerBridge.cpp  DashboardToServerBridge.h  ServerCore.pro  ServerCoreApplication.cpp  ServerCoreApplication.h  main.cpp
SocketServer/client/: Client.pro  ClientMainWindow.cpp  ClientMainWindow.h  ConnectionControlWidget.cpp  ConnectionControlWidget.h  ProgressDisplayWidget.cpp  ProgressDisplayWidget.h  ZMQClient.cpp  ZMQClient.h  client_gui.pro  client_main.cpp  main_gui.cpp
SocketServer/common/: MessageHandler.cpp  MessageHandler.h  Utils.cpp  Utils.h  common.pri  common.qrc  messages.pb.cc  messages.pb.h  messages.proto
SocketServer/common/manager/: ClientManager.cpp  ClientManager.h  ErasureTaskManager.cpp
SocketServer/common/task/: ClientInfoWidget.cpp  DiskInfoWidget.cpp  DiskInfoWidget.h  ErasureControlWidget.cpp  ErasureControlWidget.h  TaskListWidget.h  (+2 more)
SocketServer/manager/: ClientManager.cpp  ClientManager.h  ErasureTaskManager.cpp  ErasureTaskManager.h  TaskWorkerThread.cpp  TaskWorkerThread.h  manager.pri
SocketServer/widgets/: ClientInfoWidget.h  LogWidget.cpp  TaskListWidget.cpp  TaskListWidget.h  widgets.pri
proto/: eraser.proto
src/: main.cpp  mainwindow.cpp  mainwindow.h  zmqserverworker.cpp  zmqserverworker.h
(+3 files in other folders)
